--- a/part4/bloglist/server/package.json
+++ b/part4/bloglist/server/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.33.0",
+    "jest": "^29.4.1",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
@@ -19,5 +20,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.0"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
